--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
-    "nanoid": "^3.3.2"
+    "nanoid": "^3.3.2",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.15"
+    "eslint-plugin-import": "^2.26.0"
   }
 }
