--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start": "node ./src/server.js",
     "lint": "eslint ./src"
   },
   "keywords": [],
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
-    "nanoid": "^3.3.2",
-    "nodemon": "^2.0.15"
+    "nanoid": "^3.3.2"
   },
   "devDependencies": {
     "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^2.0.15"
   }
 }
