--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.15"
-  }
+  },
+  "engines": {
+    "node": "16.14.0",
+    "npm": "8.3.1"
+   },
 }
